# agentmem

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agentmem.toml.example  pyproject.toml
evals/: README.md  RECEIPTS.md  check_receipts.py  pyproject.toml  run_sonnet.sh
evals/action_audit/: README.md  run.py
evals/amnesia/: run_amnesia.py
evals/audit/: RESULTS.md  audit_reminders.py
evals/compaction/: DEMO.md  README.md  check_harness.py  driver.py  mock_claude.py  run_live.py  score.py  tickets-override.json  tickets.json
evals/compaction/fixtures/override-decoy/: _overrides.py  config.py  test_greeting.py
evals/longdebug_causal/: README.md  RESULTS.md  SPEC.md  TASKS.md  grounding.py  judge_prompts.py  run_live.py  score_runs.py  smoke.py
evals/longdebug_causal/CT-01_stale-artifacts/: Dockerfile  sessions.yaml
evals/longdebug_causal/CT-01_stale-artifacts/repo/: Makefile  REQUIREMENTS.md  pyproject.toml
evals/longdebug_causal/CT-01_stale-artifacts/repo/app/: api.py  serializer.py  storage.py
evals/longdebug_causal/CT-01_stale-artifacts/repo/schema/: user.yaml
evals/longdebug_causal/CT-01_stale-artifacts/repo/tests/: test_api.py
evals/longdebug_causal/CT-01_stale-artifacts/verifier/: test_fixtures_fresh.py  test_serializer_hidden.py
evals/longdebug_causal/CT-02_config-drift/: Dockerfile  sessions.yaml
evals/longdebug_causal/CT-02_config-drift/repo/: REQUIREMENTS.md  config.toml  pyproject.toml
evals/longdebug_causal/CT-02_config-drift/verifier/: test_aggregate_hidden.py
evals/longdebug_causal/CT-03_ruled-out/: Dockerfile  sessions.yaml
evals/longdebug_causal/CT-03_ruled-out/repo/: REQUIREMENTS.md  pyproject.toml
evals/longdebug_causal/CT-03_ruled-out/repo/worker/: config.py  (+3 more)
evals/longdebug_causal/CT-03_ruled-out/verifier/: test_1_single.py  test_2_batch.py
evals/longdebug_causal/CT-04_blast-radius/: Dockerfile  sessions.yaml
evals/longdebug_causal/CT-04_blast-radius/repo/: REQUIREMENTS.md  pyproject.toml
evals/longdebug_causal/CT-04_blast-radius/verifier/: test_api_hidden.py  test_cli_hidden.py  test_util_agnostic.py
evals/longdebug_causal/CT-05_stale-pin/: Dockerfile  sessions.yaml
evals/longdebug_causal/CT-05_stale-pin/repo/: REQUIREMENTS.md  pyproject.toml
evals/longdebug_causal/CT-05_stale-pin/verifier/: clean_runner.sh
evals/longdebug_causal/gold/: CT-01.yaml  CT-02.yaml  CT-03.yaml  CT-04.yaml  CT-05.yaml
evals/longdebug_mini/tasks/off_by_one/: task.toml
evals/longdebug_mini/tasks/ttl_bug/: task.toml
evals/longrun_sim/: README.md  metrics.py  policy_auc.py  run_live.py  scenario.py
evals/longrun_sim/probes/: repo_a.yaml  repo_b.yaml  repo_c.yaml
evals/poisoning/: README.md  check_fixture.py  poison.json  run_live.py
evals/poisoning/fixture/: money.py  orders.py  test_orders.py
evals/realworld/: RESULTS.md  ledger.py  run_probe.py  verify_account.py
evals/realworld/tickets/: attrs.json  click.json  more-itertools.json
evals/repeat/: FINDINGS.md  RESULTS.md  recall.py  run_repeat.py
evals/repeat/tickets/: attrs-bitrot.json  click-bitrot.json
evals/report/: REPORT.md  account-attrs.json  account-click-r2.json  account-more-itertools.json  action-audit.json  audit-repeat.json  causal-live-0714-224215.json  causal-live-s2.json  causal-live-s3.json  causal-live-s4.json  causal-live-s5.json  causal-live.json  compaction-haiku-smoke.json  compaction-override-haiku.json  poisoning-haiku.json  realworld-probe-attrs.json  realworld-probe-click-r2.json  realworld-probe-more-itertools.json  realworld-probe-sonnet-click.json  realworld-probe-sonnet-more-itertools.json  realworld-probe.json  reminder-audit-s5.json  reminder-audit.json  repeat-attrs-s1.json  repeat-attrs-s2.json  repeat-boost-attrs-s1.json  repeat-boost-attrs-s2.json  repeat-boost-click-s1.json  repeat-boost-click-s2.json  repeat-click-s1.json  repeat-click-s2.json  repeat-click-s3.json  repeat-click-sonnet-s1.json  repeat-click-sonnet-s2.json  repeat-click-sonnet-s3.json  repeat-recall-attrs-s1.json  repeat-recall-attrs-s2.json  repeat-recall-click-s1.json  repeat-recall-click-s2.json  results.json  (+4 more)
evals/report/longrun/: REPORT.md
evals/report/tau2-state/tau2-airline-p2/: policy.db  project.db
evals/report/tau2-state/tau2-airline-p4/: policy.db  project.db
evals/report/tau2-state/tau2-airline-pilot/: policy.db-shm  policy.db-wal  project.db-shm  project.db-wal
evals/src/agentmem_evals/: __init__.py  agent.py  budget.py  cli.py  conditions.py  live.py  metrics.py  report.py  runner.py  task.py
evals/src/agentmem_evals/tau2/: __init__.py  agent.py
evals/src/agentmem_evals/tbench/: __init__.py  harbor_agent.py  loop.py
evals/tau2/: README.md  RESULTS.md  check_adapter.py  connect.sh  run_airline.sh  run_live.py
evals/tbench/: README.md  RESULTS.md  check_endpoint.py  run_live.py  serve_vllm.sh
evals/tests/: conftest.py  test_account_ledger.py  test_amnesia_spec.py  test_causal_live_helpers.py  test_compaction_score.py  test_conditions.py  test_grounding.py  test_metrics_report.py  test_offline_run.py  test_policy_auc.py  test_recall.py  test_repeat_waste.py  test_task.py  test_tau2_agent.py  test_tbench_loop.py
evals/vm/: bringup.sh
(+55 files in other folders)
