# Workspace root. This project is a uv monorepo: the publishable code lives in
# packages/*, and this file mostly exists to tie those together and to hold the
# shared tooling config (ruff / mypy / pytest) so every package lints the same way.
#
# Day-to-day commands:
#   uv sync                         # create the venv, install everything editable
#   uv run pytest                   # unit tests (no network; LLM calls are mocked)
#   uv run ruff check --fix .       # lint + autofix
#   uv run mypy packages/agentmem/src
#   uv run agentmem demo            # see the memory layer catch a repeated failure

[project]
name = "agentmem-workspace"
version = "0.0.0"
description = "Dev workspace root for AgentMem (not published to PyPI)."
requires-python = ">=3.11"
# The root pulls in every workspace package so `uv sync` at the top level gives you a
# working environment: the `agentmem` CLI, the daemon, and the eval harness.
dependencies = ["agentmem-core", "agentmem-daemon", "agentmem-evals"]

[tool.uv.workspace]
members = ["packages/*", "evals"]

[tool.uv.sources]
agentmem-core = { workspace = true }
agentmem-daemon = { workspace = true }
agentmem-evals = { workspace = true }

# Dev-only tools. Kept here (not in the shipped package) so `pip install agentmem-core`
# stays lean for end users.
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",          # mock the Anthropic HTTP calls in tests, no API key needed
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
    "fastapi>=0.110",       # daemon; here in dev so its TestClient tests run without extras
    "uvicorn>=0.29",        # so `agentmem serve` is runnable in a dev checkout
]

# ---------------------------------------------------------------------------
# Shared tooling config
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
# The longdebug_causal CT-*/repo dirs are benchmark fixtures with deliberately
# planted bugs; linting them would fight the scenarios they're built to test.
extend-exclude = ["web", "evals/report", "evals/longdebug_causal/CT-*"]

[tool.ruff.lint]
# A deliberately small, opinionated set. We care about correctness (E, F, B),
# import hygiene (I), modern syntax (UP), and a few bug-prone patterns, not
# turning the linter into a style police force that scares off contributors.
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter, not the linter
    "B008",   # FastAPI/typer both rely on function calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011"]  # asserts in tests are the whole point

[tool.mypy]
python_version = "3.11"
# Core is held to a strict standard; integrations and evals can be looser since
# they lean on third-party stubs we don't control.
strict = true
warn_unreachable = true
files = ["packages/agentmem/src"]

[[tool.mypy.overrides]]
# The daemon lives in a separate package (not in the strict-checked set); the CLI's
# lazy import of it is treated as untyped rather than followed into FastAPI. The adapter
# SDKs (MCP, aider, OpenAI Agents) are optional extras without stubs.
module = ["litellm.*", "agentmem_daemon.*", "mcp.*", "agents.*", "aider.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The adapters wrap those untyped SDKs, so their dynamic decorators (FastMCP's
# @tool()), Any base classes (the aider Coder, the OpenAI RunHooks), and pass-through
# returns are expected. Keep them checked, just not against stubs we don't have.
module = ["agentmem.mcp", "agentmem.integrations.aider", "agentmem.integrations.openai_agents"]
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = [
    "packages/agentmem/tests",
    "packages/agentmem-daemon/tests",
    "evals/tests",
]
asyncio_mode = "auto"
# Integration tests hit the real API and cost money, so they're opt-in only:
#   uv run pytest -m integration   (requires ANTHROPIC_API_KEY)
markers = [
    "integration: talks to a real LLM provider; needs ANTHROPIC_API_KEY",
]
addopts = "-ra --strict-markers"
